@@ -4,6 +4,8 @@ v6.0.2
   - reworked interal (debug) logging system
   - reworked caching mechanism for more general use
   - added reagent bank
+  - fixed bag updating when visiting a vendor
+  - extended maximum possible columns for bags to 40 to accomodate for bigger sizes, default for bank is increased to 14
 v6.0.1
   - added file based logging on a per session basis, to enable type the following into the chat:
     /script BaudBag_DebugLog = true;
